# nano-assistant

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
.sisyphus/evidence/final-qa/: qa-report.md
.sisyphus/notepads/tui-memory-enhancements/: learnings.md
docs/releases/: v0.3.0.md  v0.3.1.md
docs/superpowers/plans/: 2026-04-13-debug-mode.md  2026-04-13-layer1-skill-paths-web-tools.md  2026-04-13-layer2-mcp-client.md  2026-04-13-plan1-platform-abstraction.md  2026-04-13-plan2-skill-versioning.md  2026-04-13-plan3-knowledge-source.md  2026-04-13-plan4-self-management.md  2026-04-13-plan5-pty-interactive.md
docs/superpowers/specs/: 2026-04-13-debug-mode-design.md  2026-04-13-skill-mcp-web-integration-design.md  2026-04-13-v03-knowledge-source-self-management-design.md
skills/arch-wiki/: SKILL.toml
skills/container-orchestration/: SKILL.md
skills/database-admin/: SKILL.md
skills/debian-wiki/: SKILL.toml
skills/redhat-wiki/: SKILL.toml
skills/server-security/: SKILL.md
src/: console.rs  lib.rs  render.rs  system_info.rs
src/agent/: dispatcher.rs  loop_.rs  mod.rs  prompt.rs  streaming.rs
src/cli/: commands.rs  mod.rs
src/config/: mod.rs  schema.rs
src/knowledge/: mediawiki.rs  mod.rs  moinmoin.rs  tool.rs  types.rs  web.rs
src/mcp/: client.rs  deferred.rs  mod.rs  tool.rs  tool_search.rs  transport.rs
src/memory/: markdown.rs  mod.rs  traits.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/providers/: anthropic.rs  compatible.rs  gemini.rs  glm.rs  mod.rs  openai.rs  traits.rs
src/security/: confirm.rs  direct.rs  mod.rs  whitelist.rs
src/skills/: audit.rs  mod.rs  testing.rs
src/tools/: content_search.rs  file_edit.rs  file_read.rs  file_write.rs  glob_search.rs  mod.rs  pty_shell.rs  shell.rs  skill_http.rs  skill_tool.rs  traits.rs  web_fetch.rs  web_search.rs
src/tui/: mod.rs
tests/: integration.rs
~/.config/nano-assistant/: MEMORY.md
